--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <script src="./js/musicplayer.js" defer></script>
-    <title>Music Player Revised</title>
+    <title>Music Player Branch Added</title>
   </head>
   <body>
     <h1>Music Player</h1>
